--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
